--- a/introducao-js/calculator/index.html
+++ b/introducao-js/calculator/index.html
@@ -12,18 +12,38 @@
     <h1>Calculadora</h1>
 
     <form action="">
-        <input type="text" id="num1">
-        +
-        <input type="text" id="num2">
-        =
-        <input type="text" id="result1" disabled> 
-        <br>
-        <input type="text" id="num3">
-        -
-        <input type="text" id="num4">
-        =
-        <input type="text" id="result2" disabled> 
-        <br>
+        <div>
+            <input type="text" id="num1">
+            +
+            <input type="text" id="num2">
+            =
+            <input type="text" id="result1" disabled> 
+        </div>
+
+        <div>
+            <input type="text" id="num3">
+            -
+            <input type="text" id="num4">
+            =
+            <input type="text" id="result2" disabled> 
+        </div>
+        
+        <div>
+            <input type="text" id="num5">
+            x
+            <input type="text" id="num6">
+            =
+            <input type="text" id="result3" disabled> 
+        </div>
+
+        <div>
+            <input type="text" id="num7">
+            /
+            <input type="text" id="num8">
+            =
+            <input type="text" id="result4" disabled> 
+        </div>
+   
         <button id="Calcular">Calcular</button>
     </form>
 
