--- a/introducao-js/calculator/index.html
+++ b/introducao-js/calculator/index.html
@@ -13,33 +13,33 @@
 
     <form action="">
         <div>
-            <input type="text" id="num1">
+            <input type="text" id="num1" class="elemento">
             +
-            <input type="text" id="num2">
+            <input type="text" id="num2" class="elemento">
             =
             <input type="text" id="result1" disabled> 
         </div>
 
         <div>
-            <input type="text" id="num3">
+            <input type="text" id="num3" class="elemento">
             -
-            <input type="text" id="num4">
+            <input type="text" id="num4" class="elemento">
             =
             <input type="text" id="result2" disabled> 
         </div>
         
         <div>
-            <input type="text" id="num5">
+            <input type="text" id="num5" class="elemento">
             x
-            <input type="text" id="num6">
+            <input type="text" id="num6" class="elemento">
             =
             <input type="text" id="result3" disabled> 
         </div>
 
         <div>
-            <input type="text" id="num7">
+            <input type="text" id="num7" class="elemento">
             /
-            <input type="text" id="num8">
+            <input type="text" id="num8" class="elemento">
             =
             <input type="text" id="result4" disabled> 
         </div>
