--- a/introducao-js/catalogo/index.html
+++ b/introducao-js/catalogo/index.html
@@ -13,15 +13,30 @@
     <div class="container">
 
         <div class="card">
-            
+            <img src="./imgs/tenis1.png" alt="Tênis">
+
+            <div class="container-card">
+                <h4><b>Tênis Infantil</b></h4>
+                <p>O melhor material, com o melhor acabamento do mercado...<a class="sMais" href="#">Saiba Mais</a></p>
+            </div>
         </div>
 
         <div class="card">
+            <img src="./imgs/tenis2.jpeg" alt="Tênis">
 
+            <div class="container-card">
+                <h4><b>Tênis New</b></h4>
+                <p>O melhor material, com o melhor acabamento do mercado...<a class="sMais" href="#">Saiba Mais</a></p>
+            </div>
         </div>
 
         <div class="card">
+            <img src="./imgs/tenis2.jpeg" alt="Tênis">
 
+            <div class="container-card">
+                <h4><b>Tênis Old</b></h4>
+                <p>O melhor material, com o melhor acabamento do mercado...<a class="sMais" href="#">Saiba Mais</a></p>
+            </div>
         </div>
     </div>
 
