--- a/introducao-js/catalogo/index.html
+++ b/introducao-js/catalogo/index.html
@@ -13,7 +13,7 @@
     <div class="container">
 
         <div class="card">
-            <img src="./imgs/tenis1.png" alt="Tênis">
+            <img src="./imgs/tenis1.png" alt="Tênis" class="produtos">
 
             <div class="container-card">
                 <h4><b>Tênis Infantil</b></h4>
@@ -22,7 +22,7 @@
         </div>
 
         <div class="card">
-            <img src="./imgs/tenis2.jpeg" alt="Tênis">
+            <img src="./imgs/tenis2.jpeg" alt="Tênis" class="produtos">
 
             <div class="container-card">
                 <h4><b>Tênis New</b></h4>
@@ -31,13 +31,17 @@
         </div>
 
         <div class="card">
-            <img src="./imgs/tenis2.jpeg" alt="Tênis">
+            <img src="./imgs/tenis2.jpeg" alt="Tênis" class="produtos">
 
             <div class="container-card">
                 <h4><b>Tênis Old</b></h4>
                 <p>O melhor material, com o melhor acabamento do mercado...<a class="sMais" href="#">Saiba Mais</a></p>
             </div>
         </div>
+    </div>
+
+    <div id="total">
+        <img id="img-ampliada" src="./imgs/tenis1.png" alt="">
     </div>
 
     <script src="./script.js"></script>
