--- a/introducao-js/catalogo/index.html
+++ b/introducao-js/catalogo/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div id="total">
-        <img id="img-ampliada" src="./imgs/tenis1.png" alt="">
+        <img id="img-ampliada" src="" alt="">
     </div>
 
     <script src="./script.js"></script>
