--- a/introducao-js/atividade-1/index.html
+++ b/introducao-js/atividade-1/index.html
@@ -43,7 +43,7 @@
                         </div>
     
                         <div id="description">
-                            <span></span>
+                            <span id="desc-value"></span>
                         </div>
                     </div>
                 </div>
